Changes for 1.5:
 
 - developed database monitoring via ODBC (Eugene)
 - added availability to export/import templates for hosts (Artem)
 - changed how is showed messages (Artem)
 - added login/logout (Artem)

Changes for 1.4.1:

 - support of processing of negative data (Alexei)
 - support of negative numbers in trigger expressions (Alexei)
 - more formal logic of execution of trigger expressions (Alexei)
 - server-side support of quotes in item parameters (num_param, get_param) (Alexei)
 - improved configuration files reading (Eugene)
 - fixed Dashed lines for graphs (Eugene)
 - fixed host and group remembering on graph monitoring screen (Eugene) 
 - improved trigger expression syntax and validation (Eugene)
 - fixed 'Field [formula] is not double' (Eugene)
 - fixed template aplication synchronization (Eugene)
 - fixed NOTSUPPORTED status for 'net.if.*' of Solaris, thanks to 'juampe' (Eugene)
 - minor fixes for sqlite mutexes (Alexei)
 - added check of memory leaks in zbx_malloc() (Alexei)
 - added "PerfCounter" configuration parameter (Eugene)
 - cleaned code to avoid '... may be used uninitialized in this function' warnings (Alexei)
 - fixed printing of debug info in delete_history() (Alexei)
 - fixed incorrect type of icmpInAddrMaskReps in SNMPv1 template (Alexei)
 - fixed processing of complex action conditions (Alexei)
 - fixed crash in processing of active checks on agent side (Alexei)
 - minor fix of misc/conf/zabbix_server.conf (Alexei)
 - fixed linkage of applications in 1.1.x migration scripts (Alexei)
 - fixed permissiong of Admin in 1.1.x migration scripts (Alexei)
 - fixed bug in processing of host groups permissions (Alexei)
 - minor fix of zabbix_sender command line help (Alexei)
 - fixed pinger to process DNS name instead of host name (Alexei)
 - fixed possible incorrect memory access in nodewatcher (Alexei)
 - fixed processing of cmdline for proc.num and proc.mem (Alexei)
 - fixed processing of {IPADDRESS} for hosts monitored by DNS name (Alexei)